Bump version, correct and add more docs
